# CPP23

./: .gitignore  Dockerfile  Introductory_Notes.md  README.md
Module 2 - Setup/: Notes.md
Module_2_Setup/: CMakeLists.txt  Notes.md  README.md  main.cpp  utilities.ixx
Module_2_Setup/Project_Template_Headers/: CMakeLists.txt  CMakePresets.json  main.cpp
Module_2_Setup/Project_Template_Modules/: CMakeLists.txt  docker-cmake-build.sh  vcpkg.json
Module_3_Simple_Program/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  utilities.ixx  vcpkg.json
Module_4_Vars_DataTypes_and_Operations/: CMakeLists.txt  README.md  main.cpp  utilities.ixx  vcpkg-configuration.json
Module_4_Vars_DataTypes_and_Operations/challenge/: CMakeLists.txt  main.cpp  utilities.ixx
Module_5_SFLC/: CMakeLists.txt  README.md  main.cpp  utilities.ixx  vcpkg.json
Module_5_SFLC/Challenge_05/: CMakeLists.txt  Dockerfile  main.cpp  utilities.ixx  vcpkg.json
Module_6_Flow_Control/: CMakeLists.txt  README.md  main.cpp  utilities.ixx
Module_6_Flow_Control/Challenge_06/: CMakeLists.txt  utilities.ixx  vcpkg.json
Module_7_Sequences/: README.md  main.cpp  utilities.ixx
Module_7_Sequences/Challenges/: CMakeLists.txt  CMakePresets.json  main.cpp  utilities.ixx
Module_8_Pointers/: CMakeLists.txt  README.md  dynamic_memory_allocation.ixx  main.cpp  pointer1.ixx  pointer2.ixx  pointer3.ixx  pointer4.ixx  smart_ptrs.ixx  utilities.ixx
Module_8_Pointers_and_Reference/: CMakeLists.txt  README.md  dynamic_memory_allocation.ixx  main.cpp  pointer3.ixx  pointer4.ixx  references.ixx  smart_ptrs.ixx  utilities.ixx  vcpkg.json
Module_9_Characters_and_Strings/: CMakeLists.txt  README.md  character_handling.ixx  cstring_handling.ixx  main.cpp  standard_string_handling.ixx  utilities.ixx  vcpkg.json
example/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  utilities.ixx  vcpkg.json
